Fixing too much padding left on API list page

--- a/src/styles/pages/_api.scss
+++ b/src/styles/pages/_api.scss
@@ -137,7 +137,6 @@ $ddpurple: #632ca6;
         #breadcrumbs {
             &:lang(ja) {
                 font-size: 15px;
-                padding-left: 15px;
             }
         }
     }
